--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -243,6 +243,7 @@ z-index:1;
                 border: 0px;
                 outline: none;
                 margin: 10px 10px;
+                background-color: #dddddd;
             }
             .span1:hover,.span2:hover,.span3:hover{
                 cursor: pointer;
