--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -7,7 +7,7 @@
             color:#656c81;
             line-height: 1.67;
            
-            font-size: 22px;
+            font-size: 20px;
             font-weight: 500;
             // margin: 25px auto;
         }
@@ -15,18 +15,19 @@
             color: #2c3550;
             line-height: 1.25;
             // margin-top: 25px;
-            padding-top: 25px;
-            font-size: 56px;
+            padding-top: 35px;
+            margin-right: 44px;
+            font-size: 52px;
             font-weight: 800 !important;
         }
         .buttons{
             margin-top: 40px;
             .pdf{
                 border-radius: 10px;
-                font-size: 19px;
-               background-color:#dddddd;
-                padding: 15px 22px;
-                margin-right: 20px;
+                font-size: 16px;
+                background-color: #dddddd;
+                padding: 14px 54px;
+                margin-right: 36px;
                 font-weight: 800 !important;
                 // margin-right: 20px;
                 a{
@@ -35,10 +36,10 @@
             }
             .inside{
                 font-weight: 800 !important;
-                background-color: #ffd84e;
-                border-radius: 10px;
-                font-size: 19px;
-                padding: 15px 46px;
+    background-color: #ffd84e;
+    border-radius: 10px;
+    font-size: 16px;
+    padding: 14px 58px;
                 a{
                     color:black;
                 }
@@ -199,7 +200,7 @@ z-index:1;
 }
 .whats-inside{
     h3{
-        font-size: 32px;
+        font-size: 30px;
         font-weight: 600;
         margin-bottom: 40px;
     }
@@ -301,9 +302,9 @@ z-index:1;
             .pdf{
                 border-radius: 10px;
                 font-size: 14px;
-                
-                padding: 11px 24px;
+                padding: 11px 42px;
                 font-weight: 800 !important;
+                margin-right: 32px;
                 // margin-right: 20px;
             }
             .inside{
@@ -379,7 +380,7 @@ label{
         h1{
             color: #2c3550;
             line-height: 1.2;
-            
+            margin-right: 0px;
             font-size: 35px;
             font-weight: 600;
         }
@@ -391,21 +392,21 @@ label{
                 border-radius: 10px;
                 font-size: 12px;
                 margin-right: 12px;
-                padding: 7px 10px;
+                padding: 7px 18px;
                 font-weight: 700 !important;
                 // margin-right: 20px;
-                .pd{
-                    height:18px;
-                    margin-right:4px !important;
-                    padding-bottom:0px !important;
-                }
+                // .pd{
+                //     height:18px;
+                //     margin-right:4px !important;
+                //     padding-bottom:0px !important;
+                // }
             }
             .inside{
                 font-weight: 700 !important;
                 background-color: #ffd84e;
                 border-radius: 10px;
                 font-size: 12px;
-                padding: 8px 20px;
+                padding: 8px 22px;
             }
         }
     }    
@@ -682,9 +683,9 @@ label{
             .pdf{
                 border-radius: 6px;
                 font-size: 13px;
-                margin: auto 5px;
-                background-color:#dddddd;
-                padding: 10px 20px;
+                margin: auto 10px;
+                background-color: #dddddd;
+                padding: 10px 28px;
                 font-weight: 700 !important;
                 // margin-right: 20px;
                 .pd{
@@ -698,7 +699,7 @@ label{
                 border-radius: 6px;
                 font-size: 13px;
                 margin: auto 5px;
-                padding: 12px 28px !important;
+                padding: 11px 36px !important;
             }
         }
     }
@@ -800,9 +801,9 @@ input {
     padding-bottom: 12px !important;
 }
 .whats-inside h3 {
-    font-size: 32px;
+    font-size: 28px;
     font-weight: 600;
-        margin-bottom: 25px; 
+        margin-bottom: 5px; 
 }
 .l{
     margin:auto 0px !important ;
@@ -865,6 +866,52 @@ input {
             }
         }
     }
+    .ebook{
+        margin-top: 12% !important;
+        .ebook-content{    
+            h4{
+                color:#656c81;
+                line-height: 1.67;
+                
+                font-size: 15px;
+                font-weight: 600;
+                margin: 20px auto;
+            }
+            h1{
+                color: #2c3550;
+                line-height: 1.25;
+                
+                font-size: 35px;
+                font-weight: 600;
+            }
+            .buttons{
+                margin-top: 20px;
+                margin-bottom: 25px;
+                .pdf{
+                    border-radius: 6px;
+                    font-size: 13px;
+                    margin-right: 10px;
+                    margin-left: 0px;
+                    background-color: #dddddd;
+                    padding: 10px 26px;
+                    font-weight: 700 !important;
+                    // margin-right: 20px;
+                    .pd{
+                        width: 16px;
+                        margin-right: 8px !important;
+                    }
+                }
+                .inside{
+                    font-weight: 600 !important;
+                    background-color: #ffd84e;
+                    border-radius: 6px;
+                    font-size: 13px;
+                    margin: auto 5px;
+                    padding: 10px 30px !important;
+                }
+            }
+        }
+    } 
 }
 @media only screen and (max-width: 374px) {
 .unstyled{
@@ -949,9 +996,10 @@ input {
             .pdf{
                 border-radius: 6px;
                 font-size: 11px;
-                background-color:#dddddd;
-                margin: auto 5px;
-                padding: 10px 12px !important;
+                background-color: #dddddd;
+                margin: auto 0px;
+                margin-right: 5px;
+                padding: 8px 20px !important;
                 font-weight: 700 !important;
                 .pd{
                     width: 12px;
@@ -965,7 +1013,7 @@ input {
                 border-radius: 6px;
                 font-size: 11px;
                 margin: auto 5px;
-                padding: 13px 18px !important;
+                padding: 8px 24px !important;
             }
         }
     }
