--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -228,6 +228,9 @@ z-index:1;
                 width:300px;
                 border: 12px solid white;
                 box-shadow:-2px 1px 8px -4px #aaaaaa;
+                &:hover{
+                    cursor: pointer;
+                }
             } 
       }
         
