--- a/styles/ebookstyles/ebook.scss
+++ b/styles/ebookstyles/ebook.scss
@@ -268,7 +268,7 @@ z-index:1;
         line-height: 35px;
         li{
             margin: 8px auto;
-            color: #2c3550;
+            color: #2c3550db;
             font-weight: 600;
             font-size: 20px;
     
@@ -492,7 +492,7 @@ label{
                 padding-left: 10px;
          li{
              margin: 0px auto;
-             color: #2c3550;
+             color: #2c3550db;
              font-weight: 600;
              
              font-size: 13px;
@@ -593,7 +593,7 @@ label{
         padding-right: 0px !important;
         li{
             margin: 5px auto;
-            color: #2c3550;
+            color: #2c3550db;
             font-weight: 600;
             font-size: 15px;
             padding-right: 0px !important;
