--- a/styles/Saas_metric/Saas_metric.css
+++ b/styles/Saas_metric/Saas_metric.css
@@ -897,7 +897,6 @@ body {
 #card5 {
   background-color: #FF616E;
   color: #FFFFFF;
-  margin-top: 30px;
 }
 
 #card5 .svg_right3 {
@@ -950,7 +949,6 @@ body {
 #card7 {
   background-color: #21E797;
   color: #FFFFFF;
-  margin-top: 30px;
 }
 
 #card7 .svg_right7 {
@@ -1103,7 +1101,6 @@ body {
 #card13 {
   background-color: #2AE0CE;
   color: #FFFFFF;
-  margin-top: 30px;
 }
 
 #card13 .svg_right13 {
@@ -1158,7 +1155,6 @@ body {
 #card15 {
   background-color: #7D21E7;
   color: #FFFFFF;
-  margin-top: 40px;
 }
 
 #card15 .read_article15 {
@@ -1176,5 +1172,58 @@ body {
   position: absolute;
   opacity: 0.1;
   margin-left: -7px;
+}
+
+@media only screen and (max-width: 768px) {
+  .college_cards .card_inside .head_title {
+    font-weight: 600;
+    font-size: 18px;
+    font-family: fontGraphikRegular;
+  }
+  .college_cards .card_inside .number {
+    font-size: 56px;
+    font-weight: bold;
+    margin-bottom: 12px;
+    color: #FFFFFF;
+    margin-bottom: -13px;
+    right: -6px;
+    position: relative;
+    opacity: 0.1;
+  }
+  .college_cards .card_inside .read_article {
+    margin-top: 20px;
+    font-size: 11px;
+    cursor: pointer;
+    bottom: 0;
+    position: absolute;
+  }
+  .college_cards .card_inside .svg_right {
+    width: 75px;
+    height: 80px;
+    padding: 0px 10px 0px 0px;
+  }
+  .svg_right1 {
+    width: 70px;
+    height: 80px;
+    padding: 0px 10px 0px 0px;
+    position: relative;
+    margin-top: -40px;
+    right: 18px;
+  }
+  #card2 .number1 {
+    font-size: 56px;
+    font-weight: bold;
+    margin-bottom: 0px;
+    color: #665CD7;
+    margin-top: -9px;
+    position: absolute;
+    margin-left: -21px;
+    opacity: 0.1;
+  }
+  #card2 .read_article1 {
+    margin-top: 40px;
+    font-size: 12px;
+    cursor: pointer;
+  }
 }
 /*# sourceMappingURL=Saas_metric.css.map */
